# lambda-S-dti

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  Dockerfile_for_grift  LICENSE  Makefile  README.md  README_compiler.md  TODO.md  docker_for_grift.sh  dune  dune-project  lambda-S-dti.opam
.github/workflows/: ci.yml
benchC/: bench_json.c  bench_json.h  run_grift.py
compile_test/: another_name.ml  bad.ml  cast_coercion_difference.ml  church.ml  church_4.ml  church_big.ml  cls-bug.ml  cls-bug2.ml  cls-reg-bug.ml  dotests.sh  dummy_blame.ml  dummy_blame.txt  dummy_blame_cast.txt  dummy_blame_explicit.txt  dyn_empty_list.ml  example1_success.ml  funcomp.ml  join-reg.ml  join-reg2.ml  join-stack.ml  join-stack2.ml  join-stack3.ml  lst.ml  many_coerce.ml  non-tail-if.ml  non-tail-if2.ml  occur_check.ml  repeat.ml  spill.ml  spill2.ml  spill3.ml
grift_builder/: Dockerfile
lib/: bench_json.c  bench_utils.ml  builder.ml  cast.c  cast.h  closure.ml  coerce.c  coerce.h  config.ml  dune  eval.ml  eval.mli  fresh_tv.ml  kNormal.ml  lexer.mll  mutate.ml  parser.mly  pipeline.ml  pp.ml  static_manage.ml  stdlib.c  stdlib.h  stdlib.ml  stdlibA.c  stdlibA.h  stdlibB.h  stdlibS.c  stdlibS.h  syntax.ml  toC.ml  translate.ml  translate.mli  typing.ml  typing.mli  utils.ml
libC/: app.c  app.h  capp.c  capp.h  cast.c  cast.h  coerce.c  coerce.h  coerceA.c  coerceA.h  coerceS.c  coerceS.h  crc.c  crc.h  dyn.h  fun.h  lst.c  lst.h  runtime.h  runtime.h.gch  stdlib.c  stdlib.h  stdlibA.c  stdlibA.h  stdlibB.c  stdlibS.c  stdlibS.h  tpl.c  tpl.h  ty.c  ty.h  types.h  value.h
samples/: church.ml  church_big.ml  evenodd.ml  fib.ml  fold.ml  loop.ml  loop_poly.ml  map.ml  map_mono.ml  mklist.ml  tak.ml  zipwith.ml
samples/church_compare/: church_mono_1.ml  church_mono_10.ml  church_mono_2.ml  church_mono_3.ml  church_mono_4.ml  church_mono_5.ml  church_mono_6.ml  church_mono_7.ml  church_mono_8.ml  church_mono_9.ml  church_poly_1.ml  church_poly_10.ml  church_poly_2.ml  church_poly_3.ml  church_poly_4.ml  church_poly_5.ml  church_poly_6.ml  church_poly_7.ml  church_poly_8.ml  church_poly_9.ml
scripts/: benchviz.py  check_requirements.py  plot_all.py  plot_caption.py  plot_compare.py  plot_herman.py  plot_metric.py  plot_relative.py  plot_scattered.py  report_absolute_times.py  report_herman.py  report_ratio_extremes.py
test/: dune  runtests.ml  test_A.ml  test_A_k.ml  test_B.ml  test_B_k.ml  test_S.ml  test_S_k.ml  test_alternative.ml  test_alternative_k.ml  test_cases.ml  test_eval.ml  test_examples.ml  test_interpreter.ml  test_kNormal.ml  test_pp.ml  test_typing.ml  testcases.ml
testC/: dotests.sh  test_cases.c  test_common.h  test_helpers.c  test_main.c
(+33 files in other folders)
